assets/css/theme-style.css
@font-face {
	font-family: 'Avenir Next';
	src: url('../web-fonts/Avenir-Next.ttc') format('ttc');
	font-weight: bold;
	font-style: normal;
}

@font-face {
	font-family: 'Lato Regular';
	src: url('../web-fonts/Lato-Regular.ttf');
	font-weight: normal;
	font-style: normal;
}

@font-face {
	font-family: 'Lato Bold';
	src: url('../web-fonts/Lato-Bold.ttf');
	font-weight: bold;
	font-style: normal;
}

@font-face {
	font-family: 'Lato Black';
	src: url('../web-fonts/Lato-Black.ttf');
	font-weight: normal;
	font-style: normal;
}

@font-face {
	font-family: 'Lato Light';
	src: url('../web-fonts/Lato-Light.ttf');
	font-weight: normal;
	font-style: normal;
}

.main {
	background: #2c2b71;  /* fallback for old browsers */
	background: -webkit-linear-gradient(to top left, #2c2b71, #4FC2B6, #ED217C);  /* Chrome 10-25, Safari 5.1-6 */
	background: linear-gradient(to top left, #2c2b71, #4FC2B6, #ED217C); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
	height: 91vh;
}

.navbarBg {
	background-color: #1C1C1C;
}

.navbar-light .navbar-brand {
	color: #FFFFFF;
	text-transform: uppercase;
}

.lead {
	color: #FFFFFF;
	font-family: 'Lato Light', sans-serif;
	font-size: 0.87em;
	margin: 2em 0;
	padding: 0 1em;
	text-transform: uppercase;
}

.logoText {
	color: #FFFFFF;
	font-size: 5em;
	padding-top: 0.5em;
	text-transform: uppercase;
}


/* menu */

.main-menu {
	padding: 0;
}

.main-menu li {
	margin-bottom: 2em;
    list-style: none;
}

.main-menu li a {
	border: 0.25em solid #FFFFFF;
	border-radius: 2em;
	color: #FFFFFF;
	font-family: 'Lato Bold', sans-serif;
	font-size: 0.9em;
	padding: 1em 2em;
	text-transform: uppercase;
	display: block;
	margin: 0 auto;
	width: 85%;
}

.main-menu li a:hover {
	color: #1C1C1C;
	background-color:  #FFFFFF;
	text-decoration: none;
	transition: 0.4s;
}

.footer{
	color: #FFFFFF;
	background-color: #1C1C1C;
}

.exhib-time {
	font-size: 0.87em;
	font-weight: bold;
	padding: 2em 1em 0 1em;
	text-align: center;
	margin-bottom: 2em;
}

.exhib-address p {
	text-align: center;
	font-size: 0.87em;
	margin: 2em 0;
}

.hr{
 	border-top: 2px solid  #FFFFFF;
	width: 100%;
	margin-bottom: 0;
	margin-top: 0;
}

.footer {
	font-family: 'Lato Regular', sans-serif;
}

.map-container {
    overflow: hidden;
    padding-bottom: 56.25%;
    position: relative;
    height: 0;
}

.map-container iframe {
    left: 0;
    top: 0;
    height: 100%;
    width: 100%;
    position: absolute;
}

.sponsers {
	background-color: #1C1C1C;
	padding: 1.3em 0;
}

.sponsers a {
	color: #FFFFFF;
	font-size: 0.6em;
	text-transform: uppercase;
	font-family: 'Lato Bold', sans-serif;
}

